--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta
+      property="og:image"
+      content="https://merrychristmas.yokepyasaroak.info/top.png"
+    />
     <title>Merry Christmas</title>
   </head>
   <body class="">
     <div id="app"></div>
+  
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
